# credit-decisioning-platform

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: s2_temporal_split.json
docs/: architecture.md  model_card.md
notebooks/: S2_D1_validation.ipynb
scripts/: data_quality.py  download_data.py  train_all.py  train_lgbm.py
src/credit_decisioning/app/: main.py  schemas.py
src/credit_decisioning/data/: load_lendingclub.py  load_lendingclub.py.bak
src/credit_decisioning_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_model_artifacts.py  test_processed_data.py
